# evraz_project_3

./: .gitignore  readme.md
components/: docker-compose.yaml
components/books_service/: Dockerfile  __init__.py  pyproject.toml  run-updater.py  run.py  setup.cfg
components/books_service/adapters/: cli.py
components/books_service/adapters/books_api/: app.py  auth.py  controllers.py  settings.py
components/books_service/adapters/database/: mapping.py  repositories.py  settings.py  tables.py
components/books_service/adapters/message_bus/: consumer.py  scheme.py  settings.py
components/books_service/application/: __init__.py  dataclasses.py  errors.py  interfaces.py  services.py
components/books_service/composites/: api.py  cli.py  consumer.py
components/books_service/tests/integration/adapters/: conftest.py
components/books_service/tests/integration/adapters/database/: conftest.py
components/books_service/tests/integration/adapters/database/repositories/: test_booking.py  test_books.py
components/books_service/tests/integration/adapters/users_api/controllers/: test_books.py
components/books_service/tests/unit/: conftest.py
components/books_service/tests/unit/services/: test_booking.py  test_books_updater.py  tests_books.py
components/nginx/: Dockerfile  nginx.conf
components/postgres_books/: init.sql
components/postgres_users/: init.sql
components/users_service/: Dockerfile  entrypoint.sh  setup.cfg
components/users_service/application/: dataclasses.py  errors.py  (+2 more)
docs/: components.puml  db_scheme.puml  deployment.puml  precedents.puml
(+18 files in other folders)
