[metadata]
name = demo-project
version = 1.0.0
description = Демо проект, построенный по чистой архитектуре
author = Zinnatullin Farid
author_email = FaridZ1999@yandex.ru
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find_namespace:
python_requires = <=3.9.5

install_requires =
    attrs~=21.2.0
    PyJWT~=2.0.0
    pydantic~=1.8.2
    sqlalchemy~=1.4.23
    alembic~=1.7.0
    gunicorn~=20.0.0
    click~=7.1.0
    python-json-logger
    python-dotenv
    psycopg2-binary
    requests

[options.extras_require]
dev =
    pytest~=6.2.5
    pytest-cov~=2.12.1
    isort~=5.10.0
    yapf~=0.32.0

[options.entry_points]
console_scripts =
    books_service=composites.cli:cli